welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
		var x=0
          var a=0
          var c=0
          			


	
	for (i <- 0 to nums.length-1){
		nums(i) match{
			case 1=> x=1
			case 2 => a=1
			case 3 => c=1
		}
	}
if(x==1 && a==1 && c==1){return true}
if(x!=1 | a!=1 | c!=1){return false}		
	
		
	

          

}
